--- a/genindex.html
+++ b/genindex.html
@@ -72,59 +72,17 @@
 <h1 id="index">Index</h1>
 
 <div class="genindex-jumpbox">
- <a href="#D"><strong>D</strong></a>
- | <a href="#E"><strong>E</strong></a>
- | <a href="#F"><strong>F</strong></a>
- | <a href="#M"><strong>M</strong></a>
+ <a href="#M"><strong>M</strong></a>
  | <a href="#U"><strong>U</strong></a>
  
 </div>
-<h2 id="D">D</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api.html#models.unet.DecodingBlock">DecodingBlock (class in models.unet)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="E">E</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api.html#models.unet.EncodingBlock">EncodingBlock (class in models.unet)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="F">F</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api.html#models.unet.DecodingBlock.forward">forward() (models.unet.DecodingBlock method)</a>
-
-      <ul>
-        <li><a href="api.html#models.unet.EncodingBlock.forward">(models.unet.EncodingBlock method)</a>
-</li>
-      </ul></li>
-  </ul></td>
-</tr></table>
-
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li>
-    models.unet
-
-      <ul>
-        <li><a href="api.html#module-models.unet">module</a>
-</li>
-      </ul></li>
-  </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     module
 
       <ul>
-        <li><a href="api.html#module-models.unet">models.unet</a>
-</li>
         <li><a href="api.html#module-utils">utils</a>
 </li>
       </ul></li>
@@ -133,10 +91,6 @@
 
 <h2 id="U">U</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api.html#models.unet.UNet">UNet (class in models.unet)</a>
-</li>
-  </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     utils
