--- a/api.html
+++ b/api.html
@@ -102,11 +102,11 @@
 <li><p><strong>time_embedding</strong> (<code class="xref py py-class docutils literal notranslate"><span class="pre">Tensor</span></code>) – time embedding tensor</p></li>
 </ul>
 </dd>
-<dt class="field-even">Returns<span class="colon">:</span></dt>
-<dd class="field-even"><p>output tensor</p>
+<dt class="field-even">Return type<span class="colon">:</span></dt>
+<dd class="field-even"><p><code class="xref py py-class docutils literal notranslate"><span class="pre">Tensor</span></code></p>
 </dd>
-<dt class="field-odd">Return type<span class="colon">:</span></dt>
-<dd class="field-odd"><p>Tensor(Batch, Channels, Height, Width)</p>
+<dt class="field-odd">Returns<span class="colon">:</span></dt>
+<dd class="field-odd"><p>output tensor</p>
 </dd>
 </dl>
 </dd></dl>
@@ -129,6 +129,9 @@
 </dd>
 <dt class="field-even">Return type<span class="colon">:</span></dt>
 <dd class="field-even"><p><code class="xref py py-class docutils literal notranslate"><span class="pre">Tensor</span></code></p>
+</dd>
+<dt class="field-odd">Returns<span class="colon">:</span></dt>
+<dd class="field-odd"><p>output tensor</p>
 </dd>
 </dl>
 </dd></dl>
