deploy: fe1706c371e4edc71be670514ce5fcd74f504da6

--- a/genindex.html
+++ b/genindex.html
@@ -77,10 +77,14 @@
 
 <div class="genindex-jumpbox">
  <a href="#_"><strong>_</strong></a>
+ | <a href="#A"><strong>A</strong></a>
  | <a href="#D"><strong>D</strong></a>
  | <a href="#E"><strong>E</strong></a>
  | <a href="#F"><strong>F</strong></a>
+ | <a href="#G"><strong>G</strong></a>
+ | <a href="#I"><strong>I</strong></a>
  | <a href="#M"><strong>M</strong></a>
+ | <a href="#N"><strong>N</strong></a>
  | <a href="#U"><strong>U</strong></a>
  
 </div>
@@ -95,6 +99,18 @@
         <li><a href="_autosummary/diffusion_models.models.unet.UNet.html#diffusion_models.models.unet.UNet.__call__">(diffusion_models.models.unet.UNet method)</a>
 </li>
       </ul></li>
+  </ul></td>
+</tr></table>
+
+<h2 id="A">A</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="_autosummary/diffusion_models.mri_forward.noise.apply_add_gauss_noise.html#diffusion_models.mri_forward.noise.apply_add_gauss_noise">apply_add_gauss_noise() (in module diffusion_models.mri_forward.noise)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="_autosummary/diffusion_models.mri_forward.noise.apply_mult_gauss_noise.html#diffusion_models.mri_forward.noise.apply_mult_gauss_noise">apply_mult_gauss_noise() (in module diffusion_models.mri_forward.noise)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -124,13 +140,27 @@
         <li><a href="_autosummary/diffusion_models.models.unet.html#module-diffusion_models.models.unet">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     diffusion_models.mri_forward
 
       <ul>
         <li><a href="_autosummary/diffusion_models.mri_forward.html#module-diffusion_models.mri_forward">module</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    diffusion_models.mri_forward.noise
+
+      <ul>
+        <li><a href="_autosummary/diffusion_models.mri_forward.noise.html#module-diffusion_models.mri_forward.noise">module</a>
+</li>
+      </ul></li>
+      <li>
+    diffusion_models.mri_forward.undersampling_mask
+
+      <ul>
+        <li><a href="_autosummary/diffusion_models.mri_forward.undersampling_mask.html#module-diffusion_models.mri_forward.undersampling_mask">module</a>
 </li>
       </ul></li>
       <li>
@@ -165,6 +195,28 @@
   </ul></td>
 </tr></table>
 
+<h2 id="G">G</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="_autosummary/diffusion_models.mri_forward.undersampling_mask.gaussian_kernel1d_h.html#diffusion_models.mri_forward.undersampling_mask.gaussian_kernel1d_h">gaussian_kernel1d_h() (in module diffusion_models.mri_forward.undersampling_mask)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="_autosummary/diffusion_models.mri_forward.undersampling_mask.gaussian_kernel1d_v.html#diffusion_models.mri_forward.undersampling_mask.gaussian_kernel1d_v">gaussian_kernel1d_v() (in module diffusion_models.mri_forward.undersampling_mask)</a>
+</li>
+      <li><a href="_autosummary/diffusion_models.mri_forward.undersampling_mask.gaussian_kernel2d.html#diffusion_models.mri_forward.undersampling_mask.gaussian_kernel2d">gaussian_kernel2d() (in module diffusion_models.mri_forward.undersampling_mask)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="I">I</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="_autosummary/diffusion_models.mri_forward.noise.independent_gauss_noise.html#diffusion_models.mri_forward.noise.independent_gauss_noise">independent_gauss_noise() (in module diffusion_models.mri_forward.noise)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -180,14 +232,36 @@
 </li>
         <li><a href="_autosummary/diffusion_models.mri_forward.html#module-diffusion_models.mri_forward">diffusion_models.mri_forward</a>
 </li>
+        <li><a href="_autosummary/diffusion_models.mri_forward.noise.html#module-diffusion_models.mri_forward.noise">diffusion_models.mri_forward.noise</a>
+</li>
+        <li><a href="_autosummary/diffusion_models.mri_forward.undersampling_mask.html#module-diffusion_models.mri_forward.undersampling_mask">diffusion_models.mri_forward.undersampling_mask</a>
+</li>
         <li><a href="_autosummary/diffusion_models.utils.html#module-diffusion_models.utils">diffusion_models.utils</a>
 </li>
       </ul></li>
   </ul></td>
 </tr></table>
 
+<h2 id="N">N</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="_autosummary/diffusion_models.mri_forward.undersampling_mask.naive_undersampling1d_h.html#diffusion_models.mri_forward.undersampling_mask.naive_undersampling1d_h">naive_undersampling1d_h() (in module diffusion_models.mri_forward.undersampling_mask)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="_autosummary/diffusion_models.mri_forward.undersampling_mask.naive_undersampling1d_v.html#diffusion_models.mri_forward.undersampling_mask.naive_undersampling1d_v">naive_undersampling1d_v() (in module diffusion_models.mri_forward.undersampling_mask)</a>
+</li>
+      <li><a href="_autosummary/diffusion_models.mri_forward.undersampling_mask.naive_undersampling2d.html#diffusion_models.mri_forward.undersampling_mask.naive_undersampling2d">naive_undersampling2d() (in module diffusion_models.mri_forward.undersampling_mask)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 <h2 id="U">U</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="_autosummary/diffusion_models.mri_forward.undersampling_mask.UndersamplingMask.html#diffusion_models.mri_forward.undersampling_mask.UndersamplingMask">UndersamplingMask (class in diffusion_models.mri_forward.undersampling_mask)</a>
+</li>
+  </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_autosummary/diffusion_models.models.unet.UNet.html#diffusion_models.models.unet.UNet">UNet (class in diffusion_models.models.unet)</a>
 </li>
