deploy: 9d0d4ab0883af347f06f3965682f69ac1db86c23

--- a/genindex.html
+++ b/genindex.html
@@ -91,12 +91,16 @@
 <h2 id="_">_</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="_autosummary/diffusion_models.models.unet.DecodingBlock.html#diffusion_models.models.unet.DecodingBlock.__call__">__call__() (diffusion_models.models.unet.DecodingBlock method)</a>
+      <li><a href="_autosummary/diffusion_models.models.forward_diffusion.ForwardDiffusion.html#diffusion_models.models.forward_diffusion.ForwardDiffusion.__call__">__call__() (diffusion_models.models.forward_diffusion.ForwardDiffusion method)</a>
 
       <ul>
+        <li><a href="_autosummary/diffusion_models.models.unet.DecodingBlock.html#diffusion_models.models.unet.DecodingBlock.__call__">(diffusion_models.models.unet.DecodingBlock method)</a>
+</li>
         <li><a href="_autosummary/diffusion_models.models.unet.EncodingBlock.html#diffusion_models.models.unet.EncodingBlock.__call__">(diffusion_models.models.unet.EncodingBlock method)</a>
 </li>
         <li><a href="_autosummary/diffusion_models.models.unet.UNet.html#diffusion_models.models.unet.UNet.__call__">(diffusion_models.models.unet.UNet method)</a>
+</li>
+        <li><a href="_autosummary/diffusion_models.mri_forward.undersampling_mask.UndersamplingMask.html#diffusion_models.mri_forward.undersampling_mask.UndersamplingMask.__call__">(diffusion_models.mri_forward.undersampling_mask.UndersamplingMask method)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -134,12 +138,21 @@
 </li>
       </ul></li>
       <li>
+    diffusion_models.models.forward_diffusion
+
+      <ul>
+        <li><a href="_autosummary/diffusion_models.models.forward_diffusion.html#module-diffusion_models.models.forward_diffusion">module</a>
+</li>
+      </ul></li>
+      <li>
     diffusion_models.models.unet
 
       <ul>
         <li><a href="_autosummary/diffusion_models.models.unet.html#module-diffusion_models.models.unet">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     diffusion_models.mri_forward
 
@@ -147,8 +160,6 @@
         <li><a href="_autosummary/diffusion_models.mri_forward.html#module-diffusion_models.mri_forward">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     diffusion_models.mri_forward.noise
 
@@ -193,6 +204,10 @@
 </li>
       </ul></li>
   </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="_autosummary/diffusion_models.models.forward_diffusion.ForwardDiffusion.html#diffusion_models.models.forward_diffusion.ForwardDiffusion">ForwardDiffusion (class in diffusion_models.models.forward_diffusion)</a>
+</li>
+  </ul></td>
 </tr></table>
 
 <h2 id="G">G</h2>
@@ -227,6 +242,8 @@
         <li><a href="_autosummary/diffusion_models.html#module-diffusion_models">diffusion_models</a>
 </li>
         <li><a href="_autosummary/diffusion_models.models.html#module-diffusion_models.models">diffusion_models.models</a>
+</li>
+        <li><a href="_autosummary/diffusion_models.models.forward_diffusion.html#module-diffusion_models.models.forward_diffusion">diffusion_models.models.forward_diffusion</a>
 </li>
         <li><a href="_autosummary/diffusion_models.models.unet.html#module-diffusion_models.models.unet">diffusion_models.models.unet</a>
 </li>
