--- a/genindex.html
+++ b/genindex.html
@@ -85,6 +85,8 @@
  | <a href="#I"><strong>I</strong></a>
  | <a href="#M"><strong>M</strong></a>
  | <a href="#N"><strong>N</strong></a>
+ | <a href="#P"><strong>P</strong></a>
+ | <a href="#S"><strong>S</strong></a>
  | <a href="#U"><strong>U</strong></a>
  
 </div>
@@ -94,11 +96,15 @@
       <li><a href="_autosummary/diffusion_models.models.forward_diffusion.ForwardDiffusion.html#diffusion_models.models.forward_diffusion.ForwardDiffusion.__call__">__call__() (diffusion_models.models.forward_diffusion.ForwardDiffusion method)</a>
 
       <ul>
+        <li><a href="_autosummary/diffusion_models.models.positional_encoding.PositionalEncoding.html#diffusion_models.models.positional_encoding.PositionalEncoding.__call__">(diffusion_models.models.positional_encoding.PositionalEncoding method)</a>
+</li>
         <li><a href="_autosummary/diffusion_models.models.unet.DecodingBlock.html#diffusion_models.models.unet.DecodingBlock.__call__">(diffusion_models.models.unet.DecodingBlock method)</a>
 </li>
         <li><a href="_autosummary/diffusion_models.models.unet.EncodingBlock.html#diffusion_models.models.unet.EncodingBlock.__call__">(diffusion_models.models.unet.EncodingBlock method)</a>
 </li>
         <li><a href="_autosummary/diffusion_models.models.unet.UNet.html#diffusion_models.models.unet.UNet.__call__">(diffusion_models.models.unet.UNet method)</a>
+</li>
+        <li><a href="_autosummary/diffusion_models.mri_forward.undersampling_mask.StochasticUndersamplingMask.html#diffusion_models.mri_forward.undersampling_mask.StochasticUndersamplingMask.__call__">(diffusion_models.mri_forward.undersampling_mask.StochasticUndersamplingMask method)</a>
 </li>
         <li><a href="_autosummary/diffusion_models.mri_forward.undersampling_mask.UndersamplingMask.html#diffusion_models.mri_forward.undersampling_mask.UndersamplingMask.__call__">(diffusion_models.mri_forward.undersampling_mask.UndersamplingMask method)</a>
 </li>
@@ -142,6 +148,13 @@
 
       <ul>
         <li><a href="_autosummary/diffusion_models.models.forward_diffusion.html#module-diffusion_models.models.forward_diffusion">module</a>
+</li>
+      </ul></li>
+      <li>
+    diffusion_models.models.positional_encoding
+
+      <ul>
+        <li><a href="_autosummary/diffusion_models.models.positional_encoding.html#module-diffusion_models.models.positional_encoding">module</a>
 </li>
       </ul></li>
       <li>
@@ -245,6 +258,8 @@
 </li>
         <li><a href="_autosummary/diffusion_models.models.forward_diffusion.html#module-diffusion_models.models.forward_diffusion">diffusion_models.models.forward_diffusion</a>
 </li>
+        <li><a href="_autosummary/diffusion_models.models.positional_encoding.html#module-diffusion_models.models.positional_encoding">diffusion_models.models.positional_encoding</a>
+</li>
         <li><a href="_autosummary/diffusion_models.models.unet.html#module-diffusion_models.models.unet">diffusion_models.models.unet</a>
 </li>
         <li><a href="_autosummary/diffusion_models.mri_forward.html#module-diffusion_models.mri_forward">diffusion_models.mri_forward</a>
@@ -264,11 +279,29 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_autosummary/diffusion_models.mri_forward.undersampling_mask.naive_undersampling1d_h.html#diffusion_models.mri_forward.undersampling_mask.naive_undersampling1d_h">naive_undersampling1d_h() (in module diffusion_models.mri_forward.undersampling_mask)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_autosummary/diffusion_models.mri_forward.undersampling_mask.naive_undersampling1d_v.html#diffusion_models.mri_forward.undersampling_mask.naive_undersampling1d_v">naive_undersampling1d_v() (in module diffusion_models.mri_forward.undersampling_mask)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_autosummary/diffusion_models.mri_forward.undersampling_mask.naive_undersampling2d.html#diffusion_models.mri_forward.undersampling_mask.naive_undersampling2d">naive_undersampling2d() (in module diffusion_models.mri_forward.undersampling_mask)</a>
+</li>
+      <li><a href="_autosummary/diffusion_models.mri_forward.undersampling_mask.normalize_mask.html#diffusion_models.mri_forward.undersampling_mask.normalize_mask">normalize_mask() (in module diffusion_models.mri_forward.undersampling_mask)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="P">P</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="_autosummary/diffusion_models.models.positional_encoding.PositionalEncoding.html#diffusion_models.models.positional_encoding.PositionalEncoding">PositionalEncoding (class in diffusion_models.models.positional_encoding)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="S">S</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="_autosummary/diffusion_models.mri_forward.undersampling_mask.StochasticUndersamplingMask.html#diffusion_models.mri_forward.undersampling_mask.StochasticUndersamplingMask">StochasticUndersamplingMask (class in diffusion_models.mri_forward.undersampling_mask)</a>
 </li>
   </ul></td>
 </tr></table>
