--- a/py-modindex.html
+++ b/py-modindex.html
@@ -33,7 +33,7 @@
           
           <a href="index.html" class="icon icon-home">
             diffusion_models
-              <img src="_static/diffMRI_logo.png" class="logo" alt="Logo"/>
+              <img src="_static/diffMRI_logo.svg" class="logo" alt="Logo"/>
           </a>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="search.html" method="get">
