--- a/_autosummary/diffusion_models.models.unet.UNet.html
+++ b/_autosummary/diffusion_models.models.unet.UNet.html
@@ -104,7 +104,7 @@
 <p class="rubric">Methods</p>
 <table class="autosummary longtable docutils align-default">
 <tbody>
-<tr class="row-odd"><td><p><code class="xref py py-obj docutils literal notranslate"><span class="pre">forward</span></code></p></td>
+<tr class="row-odd"><td><p><code class="xref py py-obj docutils literal notranslate"><span class="pre">forward</span></code>(x)</p></td>
 <td><p></p></td>
 </tr>
 </tbody>
