--- a/genindex.html
+++ b/genindex.html
@@ -87,7 +87,6 @@
  | <a href="#I"><strong>I</strong></a>
  | <a href="#M"><strong>M</strong></a>
  | <a href="#N"><strong>N</strong></a>
- | <a href="#P"><strong>P</strong></a>
  | <a href="#S"><strong>S</strong></a>
  | <a href="#U"><strong>U</strong></a>
  
@@ -95,13 +94,9 @@
 <h2 id="_">_</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="_autosummary/diffusion_models.models.forward_diffusion.ForwardDiffusion.html#diffusion_models.models.forward_diffusion.ForwardDiffusion.__call__">__call__() (diffusion_models.models.forward_diffusion.ForwardDiffusion method)</a>
+      <li><a href="_autosummary/diffusion_models.models.unet.DecodingBlock.html#diffusion_models.models.unet.DecodingBlock.__call__">__call__() (diffusion_models.models.unet.DecodingBlock method)</a>
 
       <ul>
-        <li><a href="_autosummary/diffusion_models.models.positional_encoding.PositionalEncoding.html#diffusion_models.models.positional_encoding.PositionalEncoding.__call__">(diffusion_models.models.positional_encoding.PositionalEncoding method)</a>
-</li>
-        <li><a href="_autosummary/diffusion_models.models.unet.DecodingBlock.html#diffusion_models.models.unet.DecodingBlock.__call__">(diffusion_models.models.unet.DecodingBlock method)</a>
-</li>
         <li><a href="_autosummary/diffusion_models.models.unet.EncodingBlock.html#diffusion_models.models.unet.EncodingBlock.__call__">(diffusion_models.models.unet.EncodingBlock method)</a>
 </li>
         <li><a href="_autosummary/diffusion_models.models.unet.UNet.html#diffusion_models.models.unet.UNet.__call__">(diffusion_models.models.unet.UNet method)</a>
@@ -139,35 +134,12 @@
 </li>
       </ul></li>
       <li>
-    diffusion_models.models
-
-      <ul>
-        <li><a href="_autosummary/diffusion_models.models.html#module-diffusion_models.models">module</a>
-</li>
-      </ul></li>
-      <li>
-    diffusion_models.models.forward_diffusion
-
-      <ul>
-        <li><a href="_autosummary/diffusion_models.models.forward_diffusion.html#module-diffusion_models.models.forward_diffusion">module</a>
-</li>
-      </ul></li>
-      <li>
-    diffusion_models.models.positional_encoding
-
-      <ul>
-        <li><a href="_autosummary/diffusion_models.models.positional_encoding.html#module-diffusion_models.models.positional_encoding">module</a>
-</li>
-      </ul></li>
-      <li>
     diffusion_models.models.unet
 
       <ul>
         <li><a href="_autosummary/diffusion_models.models.unet.html#module-diffusion_models.models.unet">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     diffusion_models.mri_forward
 
@@ -175,6 +147,8 @@
         <li><a href="_autosummary/diffusion_models.mri_forward.html#module-diffusion_models.mri_forward">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     diffusion_models.mri_forward.noise
 
@@ -219,10 +193,6 @@
 </li>
       </ul></li>
   </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="_autosummary/diffusion_models.models.forward_diffusion.ForwardDiffusion.html#diffusion_models.models.forward_diffusion.ForwardDiffusion">ForwardDiffusion (class in diffusion_models.models.forward_diffusion)</a>
-</li>
-  </ul></td>
 </tr></table>
 
 <h2 id="G">G</h2>
@@ -256,12 +226,6 @@
       <ul>
         <li><a href="_autosummary/diffusion_models.html#module-diffusion_models">diffusion_models</a>
 </li>
-        <li><a href="_autosummary/diffusion_models.models.html#module-diffusion_models.models">diffusion_models.models</a>
-</li>
-        <li><a href="_autosummary/diffusion_models.models.forward_diffusion.html#module-diffusion_models.models.forward_diffusion">diffusion_models.models.forward_diffusion</a>
-</li>
-        <li><a href="_autosummary/diffusion_models.models.positional_encoding.html#module-diffusion_models.models.positional_encoding">diffusion_models.models.positional_encoding</a>
-</li>
         <li><a href="_autosummary/diffusion_models.models.unet.html#module-diffusion_models.models.unet">diffusion_models.models.unet</a>
 </li>
         <li><a href="_autosummary/diffusion_models.mri_forward.html#module-diffusion_models.mri_forward">diffusion_models.mri_forward</a>
@@ -288,14 +252,6 @@
       <li><a href="_autosummary/diffusion_models.mri_forward.undersampling_mask.naive_undersampling2d.html#diffusion_models.mri_forward.undersampling_mask.naive_undersampling2d">naive_undersampling2d() (in module diffusion_models.mri_forward.undersampling_mask)</a>
 </li>
       <li><a href="_autosummary/diffusion_models.mri_forward.undersampling_mask.normalize_mask.html#diffusion_models.mri_forward.undersampling_mask.normalize_mask">normalize_mask() (in module diffusion_models.mri_forward.undersampling_mask)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="P">P</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="_autosummary/diffusion_models.models.positional_encoding.PositionalEncoding.html#diffusion_models.models.positional_encoding.PositionalEncoding">PositionalEncoding (class in diffusion_models.models.positional_encoding)</a>
 </li>
   </ul></td>
 </tr></table>
