--- a/genindex.html
+++ b/genindex.html
@@ -87,19 +87,25 @@
  | <a href="#I"><strong>I</strong></a>
  | <a href="#M"><strong>M</strong></a>
  | <a href="#N"><strong>N</strong></a>
+ | <a href="#P"><strong>P</strong></a>
  | <a href="#S"><strong>S</strong></a>
  | <a href="#U"><strong>U</strong></a>
+ | <a href="#V"><strong>V</strong></a>
  
 </div>
 <h2 id="_">_</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="_autosummary/diffusion_models.models.unet.DecodingBlock.html#diffusion_models.models.unet.DecodingBlock.__call__">__call__() (diffusion_models.models.unet.DecodingBlock method)</a>
+      <li><a href="_autosummary/diffusion_models.models.positional_encoding.PositionalEncoding.html#diffusion_models.models.positional_encoding.PositionalEncoding.__call__">__call__() (diffusion_models.models.positional_encoding.PositionalEncoding method)</a>
 
       <ul>
+        <li><a href="_autosummary/diffusion_models.models.unet.DecodingBlock.html#diffusion_models.models.unet.DecodingBlock.__call__">(diffusion_models.models.unet.DecodingBlock method)</a>
+</li>
         <li><a href="_autosummary/diffusion_models.models.unet.EncodingBlock.html#diffusion_models.models.unet.EncodingBlock.__call__">(diffusion_models.models.unet.EncodingBlock method)</a>
 </li>
         <li><a href="_autosummary/diffusion_models.models.unet.UNet.html#diffusion_models.models.unet.UNet.__call__">(diffusion_models.models.unet.UNet method)</a>
+</li>
+        <li><a href="_autosummary/diffusion_models.models.vae.VariationalAutoencoder.html#diffusion_models.models.vae.VariationalAutoencoder.__call__">(diffusion_models.models.vae.VariationalAutoencoder method)</a>
 </li>
         <li><a href="_autosummary/diffusion_models.mri_forward.undersampling_mask.StochasticUndersamplingMask.html#diffusion_models.mri_forward.undersampling_mask.StochasticUndersamplingMask.__call__">(diffusion_models.mri_forward.undersampling_mask.StochasticUndersamplingMask method)</a>
 </li>
@@ -134,6 +140,20 @@
 </li>
       </ul></li>
       <li>
+    diffusion_models.models
+
+      <ul>
+        <li><a href="_autosummary/diffusion_models.models.html#module-diffusion_models.models">module</a>
+</li>
+      </ul></li>
+      <li>
+    diffusion_models.models.positional_encoding
+
+      <ul>
+        <li><a href="_autosummary/diffusion_models.models.positional_encoding.html#module-diffusion_models.models.positional_encoding">module</a>
+</li>
+      </ul></li>
+      <li>
     diffusion_models.models.unet
 
       <ul>
@@ -141,14 +161,21 @@
 </li>
       </ul></li>
       <li>
+    diffusion_models.models.vae
+
+      <ul>
+        <li><a href="_autosummary/diffusion_models.models.vae.html#module-diffusion_models.models.vae">module</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
     diffusion_models.mri_forward
 
       <ul>
         <li><a href="_autosummary/diffusion_models.mri_forward.html#module-diffusion_models.mri_forward">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     diffusion_models.mri_forward.noise
 
@@ -226,7 +253,13 @@
       <ul>
         <li><a href="_autosummary/diffusion_models.html#module-diffusion_models">diffusion_models</a>
 </li>
+        <li><a href="_autosummary/diffusion_models.models.html#module-diffusion_models.models">diffusion_models.models</a>
+</li>
+        <li><a href="_autosummary/diffusion_models.models.positional_encoding.html#module-diffusion_models.models.positional_encoding">diffusion_models.models.positional_encoding</a>
+</li>
         <li><a href="_autosummary/diffusion_models.models.unet.html#module-diffusion_models.models.unet">diffusion_models.models.unet</a>
+</li>
+        <li><a href="_autosummary/diffusion_models.models.vae.html#module-diffusion_models.models.vae">diffusion_models.models.vae</a>
 </li>
         <li><a href="_autosummary/diffusion_models.mri_forward.html#module-diffusion_models.mri_forward">diffusion_models.mri_forward</a>
 </li>
@@ -256,6 +289,14 @@
   </ul></td>
 </tr></table>
 
+<h2 id="P">P</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="_autosummary/diffusion_models.models.positional_encoding.PositionalEncoding.html#diffusion_models.models.positional_encoding.PositionalEncoding">PositionalEncoding (class in diffusion_models.models.positional_encoding)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -272,6 +313,14 @@
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_autosummary/diffusion_models.models.unet.UNet.html#diffusion_models.models.unet.UNet">UNet (class in diffusion_models.models.unet)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="V">V</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="_autosummary/diffusion_models.models.vae.VariationalAutoencoder.html#diffusion_models.models.vae.VariationalAutoencoder">VariationalAutoencoder (class in diffusion_models.models.vae)</a>
 </li>
   </ul></td>
 </tr></table>
