--- a/_autosummary/diffusion_models.utils.html
+++ b/_autosummary/diffusion_models.utils.html
@@ -20,7 +20,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Acknowledgments" href="../chap/tex_stuff.html" />
-    <link rel="prev" title="diffusion_models.mri_forward.undersampling_mask.UndersamplingMask" href="diffusion_models.mri_forward.undersampling_mask.UndersamplingMask.html" /> 
+    <link rel="prev" title="diffusion_models.mri_forward" href="diffusion_models.mri_forward.html" /> 
 </head>
 
 <body class="wy-body-for-nav"> 
@@ -92,7 +92,7 @@
            </div>
           </div>
           <footer><div class="rst-footer-buttons" role="navigation" aria-label="Footer">
-        <a href="diffusion_models.mri_forward.undersampling_mask.UndersamplingMask.html" class="btn btn-neutral float-left" title="diffusion_models.mri_forward.undersampling_mask.UndersamplingMask" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
+        <a href="diffusion_models.mri_forward.html" class="btn btn-neutral float-left" title="diffusion_models.mri_forward" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
         <a href="../chap/tex_stuff.html" class="btn btn-neutral float-right" title="Acknowledgments" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
     </div>
 
