--- a/genindex.html
+++ b/genindex.html
@@ -78,60 +78,13 @@
 <h1 id="index">Index</h1>
 
 <div class="genindex-jumpbox">
- <a href="#_"><strong>_</strong></a>
- | <a href="#A"><strong>A</strong></a>
- | <a href="#D"><strong>D</strong></a>
- | <a href="#E"><strong>E</strong></a>
- | <a href="#F"><strong>F</strong></a>
- | <a href="#G"><strong>G</strong></a>
- | <a href="#I"><strong>I</strong></a>
+ <a href="#D"><strong>D</strong></a>
  | <a href="#M"><strong>M</strong></a>
- | <a href="#N"><strong>N</strong></a>
- | <a href="#P"><strong>P</strong></a>
- | <a href="#S"><strong>S</strong></a>
- | <a href="#U"><strong>U</strong></a>
- | <a href="#V"><strong>V</strong></a>
  
 </div>
-<h2 id="_">_</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="_autosummary/diffusion_models.models.positional_encoding.PositionalEncoding.html#diffusion_models.models.positional_encoding.PositionalEncoding.__call__">__call__() (diffusion_models.models.positional_encoding.PositionalEncoding method)</a>
-
-      <ul>
-        <li><a href="_autosummary/diffusion_models.models.unet.DecodingBlock.html#diffusion_models.models.unet.DecodingBlock.__call__">(diffusion_models.models.unet.DecodingBlock method)</a>
-</li>
-        <li><a href="_autosummary/diffusion_models.models.unet.EncodingBlock.html#diffusion_models.models.unet.EncodingBlock.__call__">(diffusion_models.models.unet.EncodingBlock method)</a>
-</li>
-        <li><a href="_autosummary/diffusion_models.models.unet.UNet.html#diffusion_models.models.unet.UNet.__call__">(diffusion_models.models.unet.UNet method)</a>
-</li>
-        <li><a href="_autosummary/diffusion_models.models.vae.VariationalAutoencoder.html#diffusion_models.models.vae.VariationalAutoencoder.__call__">(diffusion_models.models.vae.VariationalAutoencoder method)</a>
-</li>
-        <li><a href="_autosummary/diffusion_models.mri_forward.undersampling_mask.StochasticUndersamplingMask.html#diffusion_models.mri_forward.undersampling_mask.StochasticUndersamplingMask.__call__">(diffusion_models.mri_forward.undersampling_mask.StochasticUndersamplingMask method)</a>
-</li>
-        <li><a href="_autosummary/diffusion_models.mri_forward.undersampling_mask.UndersamplingMask.html#diffusion_models.mri_forward.undersampling_mask.UndersamplingMask.__call__">(diffusion_models.mri_forward.undersampling_mask.UndersamplingMask method)</a>
-</li>
-      </ul></li>
-  </ul></td>
-</tr></table>
-
-<h2 id="A">A</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="_autosummary/diffusion_models.mri_forward.noise.apply_add_gauss_noise.html#diffusion_models.mri_forward.noise.apply_add_gauss_noise">apply_add_gauss_noise() (in module diffusion_models.mri_forward.noise)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="_autosummary/diffusion_models.mri_forward.noise.apply_mult_gauss_noise.html#diffusion_models.mri_forward.noise.apply_mult_gauss_noise">apply_mult_gauss_noise() (in module diffusion_models.mri_forward.noise)</a>
-</li>
-  </ul></td>
-</tr></table>
-
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="_autosummary/diffusion_models.models.unet.DecodingBlock.html#diffusion_models.models.unet.DecodingBlock">DecodingBlock (class in diffusion_models.models.unet)</a>
-</li>
       <li>
     diffusion_models.models
 
@@ -140,49 +93,14 @@
 </li>
       </ul></li>
       <li>
-    diffusion_models.models.positional_encoding
-
-      <ul>
-        <li><a href="_autosummary/diffusion_models.models.positional_encoding.html#module-diffusion_models.models.positional_encoding">module</a>
-</li>
-      </ul></li>
-      <li>
-    diffusion_models.models.unet
-
-      <ul>
-        <li><a href="_autosummary/diffusion_models.models.unet.html#module-diffusion_models.models.unet">module</a>
-</li>
-      </ul></li>
-      <li>
-    diffusion_models.models.vae
-
-      <ul>
-        <li><a href="_autosummary/diffusion_models.models.vae.html#module-diffusion_models.models.vae">module</a>
-</li>
-      </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li>
     diffusion_models.mri_forward
 
       <ul>
         <li><a href="_autosummary/diffusion_models.mri_forward.html#module-diffusion_models.mri_forward">module</a>
 </li>
       </ul></li>
-      <li>
-    diffusion_models.mri_forward.noise
-
-      <ul>
-        <li><a href="_autosummary/diffusion_models.mri_forward.noise.html#module-diffusion_models.mri_forward.noise">module</a>
-</li>
-      </ul></li>
-      <li>
-    diffusion_models.mri_forward.undersampling_mask
-
-      <ul>
-        <li><a href="_autosummary/diffusion_models.mri_forward.undersampling_mask.html#module-diffusion_models.mri_forward.undersampling_mask">module</a>
-</li>
-      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     diffusion_models.utils
 
@@ -190,50 +108,6 @@
         <li><a href="_autosummary/diffusion_models.utils.html#module-diffusion_models.utils">module</a>
 </li>
       </ul></li>
-      <li><a href="_autosummary/diffusion_models.models.unet.dummy_func.html#diffusion_models.models.unet.dummy_func">dummy_func() (in module diffusion_models.models.unet)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="E">E</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="_autosummary/diffusion_models.models.unet.EncodingBlock.html#diffusion_models.models.unet.EncodingBlock">EncodingBlock (class in diffusion_models.models.unet)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="F">F</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="_autosummary/diffusion_models.models.unet.DecodingBlock.html#diffusion_models.models.unet.DecodingBlock.forward">forward() (diffusion_models.models.unet.DecodingBlock method)</a>
-
-      <ul>
-        <li><a href="_autosummary/diffusion_models.models.unet.EncodingBlock.html#diffusion_models.models.unet.EncodingBlock.forward">(diffusion_models.models.unet.EncodingBlock method)</a>
-</li>
-      </ul></li>
-  </ul></td>
-</tr></table>
-
-<h2 id="G">G</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="_autosummary/diffusion_models.mri_forward.undersampling_mask.gaussian_kernel1d_h.html#diffusion_models.mri_forward.undersampling_mask.gaussian_kernel1d_h">gaussian_kernel1d_h() (in module diffusion_models.mri_forward.undersampling_mask)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="_autosummary/diffusion_models.mri_forward.undersampling_mask.gaussian_kernel1d_v.html#diffusion_models.mri_forward.undersampling_mask.gaussian_kernel1d_v">gaussian_kernel1d_v() (in module diffusion_models.mri_forward.undersampling_mask)</a>
-</li>
-      <li><a href="_autosummary/diffusion_models.mri_forward.undersampling_mask.gaussian_kernel2d.html#diffusion_models.mri_forward.undersampling_mask.gaussian_kernel2d">gaussian_kernel2d() (in module diffusion_models.mri_forward.undersampling_mask)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="I">I</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="_autosummary/diffusion_models.mri_forward.noise.independent_gauss_noise.html#diffusion_models.mri_forward.noise.independent_gauss_noise">independent_gauss_noise() (in module diffusion_models.mri_forward.noise)</a>
-</li>
   </ul></td>
 </tr></table>
 
@@ -246,73 +120,11 @@
       <ul>
         <li><a href="_autosummary/diffusion_models.models.html#module-diffusion_models.models">diffusion_models.models</a>
 </li>
-        <li><a href="_autosummary/diffusion_models.models.positional_encoding.html#module-diffusion_models.models.positional_encoding">diffusion_models.models.positional_encoding</a>
-</li>
-        <li><a href="_autosummary/diffusion_models.models.unet.html#module-diffusion_models.models.unet">diffusion_models.models.unet</a>
-</li>
-        <li><a href="_autosummary/diffusion_models.models.vae.html#module-diffusion_models.models.vae">diffusion_models.models.vae</a>
-</li>
         <li><a href="_autosummary/diffusion_models.mri_forward.html#module-diffusion_models.mri_forward">diffusion_models.mri_forward</a>
-</li>
-        <li><a href="_autosummary/diffusion_models.mri_forward.noise.html#module-diffusion_models.mri_forward.noise">diffusion_models.mri_forward.noise</a>
-</li>
-        <li><a href="_autosummary/diffusion_models.mri_forward.undersampling_mask.html#module-diffusion_models.mri_forward.undersampling_mask">diffusion_models.mri_forward.undersampling_mask</a>
 </li>
         <li><a href="_autosummary/diffusion_models.utils.html#module-diffusion_models.utils">diffusion_models.utils</a>
 </li>
       </ul></li>
-  </ul></td>
-</tr></table>
-
-<h2 id="N">N</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="_autosummary/diffusion_models.mri_forward.undersampling_mask.naive_undersampling1d_h.html#diffusion_models.mri_forward.undersampling_mask.naive_undersampling1d_h">naive_undersampling1d_h() (in module diffusion_models.mri_forward.undersampling_mask)</a>
-</li>
-      <li><a href="_autosummary/diffusion_models.mri_forward.undersampling_mask.naive_undersampling1d_v.html#diffusion_models.mri_forward.undersampling_mask.naive_undersampling1d_v">naive_undersampling1d_v() (in module diffusion_models.mri_forward.undersampling_mask)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="_autosummary/diffusion_models.mri_forward.undersampling_mask.naive_undersampling2d.html#diffusion_models.mri_forward.undersampling_mask.naive_undersampling2d">naive_undersampling2d() (in module diffusion_models.mri_forward.undersampling_mask)</a>
-</li>
-      <li><a href="_autosummary/diffusion_models.mri_forward.undersampling_mask.normalize_mask.html#diffusion_models.mri_forward.undersampling_mask.normalize_mask">normalize_mask() (in module diffusion_models.mri_forward.undersampling_mask)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="P">P</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="_autosummary/diffusion_models.models.positional_encoding.PositionalEncoding.html#diffusion_models.models.positional_encoding.PositionalEncoding">PositionalEncoding (class in diffusion_models.models.positional_encoding)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="S">S</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="_autosummary/diffusion_models.mri_forward.undersampling_mask.StochasticUndersamplingMask.html#diffusion_models.mri_forward.undersampling_mask.StochasticUndersamplingMask">StochasticUndersamplingMask (class in diffusion_models.mri_forward.undersampling_mask)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="U">U</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="_autosummary/diffusion_models.mri_forward.undersampling_mask.UndersamplingMask.html#diffusion_models.mri_forward.undersampling_mask.UndersamplingMask">UndersamplingMask (class in diffusion_models.mri_forward.undersampling_mask)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="_autosummary/diffusion_models.models.unet.UNet.html#diffusion_models.models.unet.UNet">UNet (class in diffusion_models.models.unet)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="V">V</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="_autosummary/diffusion_models.models.vae.VariationalAutoencoder.html#diffusion_models.models.vae.VariationalAutoencoder">VariationalAutoencoder (class in diffusion_models.models.vae)</a>
-</li>
   </ul></td>
 </tr></table>
 
