deploy: 2d9c488aba9a4e54180c6864add302eb15740806

--- a/_autosummary/diffusion_models.models.diffusion.ForwardDiffusion.html
+++ b/_autosummary/diffusion_models.models.diffusion.ForwardDiffusion.html
@@ -546,7 +546,7 @@ strings are acceptable.</p>
 <dt class="field-odd">Parameters<span class="colon">:</span></dt>
 <dd class="field-odd"><ul class="simple">
 <li><p><strong>x_0</strong> (<code class="xref py py-class docutils literal notranslate"><span class="pre">Float[Tensor,</span> <span class="pre">'batch</span> <span class="pre">channels</span> <span class="pre">height</span> <span class="pre">width']</span></code>) – input tensor where noise should be applied to</p></li>
-<li><p><strong>t</strong> (<code class="xref py py-class docutils literal notranslate"><span class="pre">int</span></code>) – timestep of the noise scheduler from which noise should be chosen</p></li>
+<li><p><strong>t</strong> (<code class="xref py py-class docutils literal notranslate"><span class="pre">Int[Tensor,</span> <span class="pre">'batch']</span></code>) – timestep of the noise scheduler from which noise should be chosen</p></li>
 </ul>
 </dd>
 <dt class="field-even">Returns<span class="colon">:</span></dt>
