--- a/genindex.html
+++ b/genindex.html
@@ -494,10 +494,10 @@
 </li>
       </ul></li>
       <li>
-    diffusion_models.utils.dataloaders
+    diffusion_models.utils.datasets
 
       <ul>
-        <li><a href="_autosummary/diffusion_models.utils.dataloaders.html#module-diffusion_models.utils.dataloaders">module</a>
+        <li><a href="_autosummary/diffusion_models.utils.datasets.html#module-diffusion_models.utils.datasets">module</a>
 </li>
       </ul></li>
   </ul></td>
@@ -554,10 +554,10 @@
         <li><a href="_autosummary/diffusion_models.mri_forward.undersampling_mask.UndersamplingMask.html#diffusion_models.mri_forward.undersampling_mask.UndersamplingMask.double">(diffusion_models.mri_forward.undersampling_mask.UndersamplingMask method)</a>
 </li>
       </ul></li>
-      <li><a href="_autosummary/diffusion_models.utils.dataloaders.MNISTTestLoader.html#diffusion_models.utils.dataloaders.MNISTTestLoader.download">download() (diffusion_models.utils.dataloaders.MNISTTestLoader method)</a>
+      <li><a href="_autosummary/diffusion_models.utils.datasets.MNISTTestDataset.html#diffusion_models.utils.datasets.MNISTTestDataset.download">download() (diffusion_models.utils.datasets.MNISTTestDataset method)</a>
 
       <ul>
-        <li><a href="_autosummary/diffusion_models.utils.dataloaders.MNISTTrainLoader.html#diffusion_models.utils.dataloaders.MNISTTrainLoader.download">(diffusion_models.utils.dataloaders.MNISTTrainLoader method)</a>
+        <li><a href="_autosummary/diffusion_models.utils.datasets.MNISTTrainDataset.html#diffusion_models.utils.datasets.MNISTTrainDataset.download">(diffusion_models.utils.datasets.MNISTTrainDataset method)</a>
 </li>
       </ul></li>
   </ul></td>
@@ -1014,9 +1014,9 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_autosummary/diffusion_models.models.mnist_enc.MNISTEncoder.html#diffusion_models.models.mnist_enc.MNISTEncoder">MNISTEncoder (class in diffusion_models.models.mnist_enc)</a>
 </li>
-      <li><a href="_autosummary/diffusion_models.utils.dataloaders.MNISTTestLoader.html#diffusion_models.utils.dataloaders.MNISTTestLoader">MNISTTestLoader (class in diffusion_models.utils.dataloaders)</a>
+      <li><a href="_autosummary/diffusion_models.utils.datasets.MNISTTestDataset.html#diffusion_models.utils.datasets.MNISTTestDataset">MNISTTestDataset (class in diffusion_models.utils.datasets)</a>
 </li>
-      <li><a href="_autosummary/diffusion_models.utils.dataloaders.MNISTTrainLoader.html#diffusion_models.utils.dataloaders.MNISTTrainLoader">MNISTTrainLoader (class in diffusion_models.utils.dataloaders)</a>
+      <li><a href="_autosummary/diffusion_models.utils.datasets.MNISTTrainDataset.html#diffusion_models.utils.datasets.MNISTTrainDataset">MNISTTrainDataset (class in diffusion_models.utils.datasets)</a>
 </li>
       <li>
     module
@@ -1042,7 +1042,7 @@
 </li>
         <li><a href="_autosummary/diffusion_models.utils.html#module-diffusion_models.utils">diffusion_models.utils</a>
 </li>
-        <li><a href="_autosummary/diffusion_models.utils.dataloaders.html#module-diffusion_models.utils.dataloaders">diffusion_models.utils.dataloaders</a>
+        <li><a href="_autosummary/diffusion_models.utils.datasets.html#module-diffusion_models.utils.datasets">diffusion_models.utils.datasets</a>
 </li>
         <li><a href="_autosummary/diffusion_models.utils.helpers.html#module-diffusion_models.utils.helpers">diffusion_models.utils.helpers</a>
 </li>
@@ -1681,6 +1681,8 @@
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="_autosummary/diffusion_models.models.diffusion.DiffusionModel.html#diffusion_models.models.diffusion.DiffusionModel.sample">sample() (diffusion_models.models.diffusion.DiffusionModel method)</a>
+</li>
       <li><a href="_autosummary/diffusion_models.models.diffusion.DiffusionModel.html#diffusion_models.models.diffusion.DiffusionModel.set_extra_state">set_extra_state() (diffusion_models.models.diffusion.DiffusionModel method)</a>
 
       <ul>
@@ -1949,6 +1951,8 @@
 <h2 id="U">U</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="_autosummary/diffusion_models.utils.datasets.UnconditionedCifar10Dataset.html#diffusion_models.utils.datasets.UnconditionedCifar10Dataset">UnconditionedCifar10Dataset (class in diffusion_models.utils.datasets)</a>
+</li>
       <li><a href="_autosummary/diffusion_models.mri_forward.undersampling_mask.UndersamplingMask.html#diffusion_models.mri_forward.undersampling_mask.UndersamplingMask">UndersamplingMask (class in diffusion_models.mri_forward.undersampling_mask)</a>
 </li>
   </ul></td>
