deploy: ba508236c19db51141b9f0d42ea63a0b8cd16b14

--- a/idea_corner.html
+++ b/idea_corner.html
@@ -238,6 +238,7 @@
 <li><p>only the initial sampling is conditioned on the image (in the regions where we have no mask)</p></li>
 <li><p>it goes forward and backward in diffusion time during inference (allows resampling and better semantic matching of reconstructed region). starting at complete noise; fixed amount of steps in reverse process; fixed amount of steps in forward process.</p></li>
 <li><p>sampling schedule proposed that greatly improves image quality</p></li>
+<li><p>they use human evaluation an LPIPS</p></li>
 </ul>
 </section>
 <section id="image-guided-ddpms">
