deploy: f3cc9aacfbd850fa1c7b221113b58285be9788c3

--- a/genindex.html
+++ b/genindex.html
@@ -242,6 +242,8 @@
       <ul>
         <li><a href="_autosummary/diffusion_models.models.positional_encoding.PositionalEncoding.html#diffusion_models.models.positional_encoding.PositionalEncoding.forward">(diffusion_models.models.positional_encoding.PositionalEncoding method)</a>
 </li>
+        <li><a href="_autosummary/diffusion_models.models.positional_encoding.PositionalEncoding2D.html#diffusion_models.models.positional_encoding.PositionalEncoding2D.forward">(diffusion_models.models.positional_encoding.PositionalEncoding2D method)</a>
+</li>
         <li><a href="_autosummary/diffusion_models.models.unet.DecodingBlock.html#diffusion_models.models.unet.DecodingBlock.forward">(diffusion_models.models.unet.DecodingBlock method)</a>
 </li>
         <li><a href="_autosummary/diffusion_models.models.unet.EncodingBlock.html#diffusion_models.models.unet.EncodingBlock.forward">(diffusion_models.models.unet.EncodingBlock method)</a>
@@ -289,6 +291,10 @@
 <h2 id="I">I</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="_autosummary/diffusion_models.utils.datasets.ImageNet64Dataset.html#diffusion_models.utils.datasets.ImageNet64Dataset">ImageNet64Dataset (class in diffusion_models.utils.datasets)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_autosummary/diffusion_models.mri_forward.noise.independent_gauss_noise.html#diffusion_models.mri_forward.noise.independent_gauss_noise">independent_gauss_noise() (in module diffusion_models.mri_forward.noise)</a>
 </li>
   </ul></td>
@@ -297,6 +303,8 @@
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="_autosummary/diffusion_models.utils.datasets.MNISTDebugDataset.html#diffusion_models.utils.datasets.MNISTDebugDataset">MNISTDebugDataset (class in diffusion_models.utils.datasets)</a>
+</li>
       <li><a href="_autosummary/diffusion_models.models.mnist_enc.MNISTEncoder.html#diffusion_models.models.mnist_enc.MNISTEncoder">MNISTEncoder (class in diffusion_models.models.mnist_enc)</a>
 </li>
       <li><a href="_autosummary/diffusion_models.utils.datasets.MNISTTestDataset.html#diffusion_models.utils.datasets.MNISTTestDataset">MNISTTestDataset (class in diffusion_models.utils.datasets)</a>
@@ -355,6 +363,10 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_autosummary/diffusion_models.models.positional_encoding.PositionalEncoding.html#diffusion_models.models.positional_encoding.PositionalEncoding">PositionalEncoding (class in diffusion_models.models.positional_encoding)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="_autosummary/diffusion_models.models.positional_encoding.PositionalEncoding2D.html#diffusion_models.models.positional_encoding.PositionalEncoding2D">PositionalEncoding2D (class in diffusion_models.models.positional_encoding)</a>
 </li>
   </ul></td>
 </tr></table>
