--- a/_autosummary/diffusion_models.models.unet.html
+++ b/_autosummary/diffusion_models.models.unet.html
@@ -20,7 +20,7 @@
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="diffusion_models.models.unet.DecodingBlock" href="diffusion_models.models.unet.DecodingBlock.html" />
-    <link rel="prev" title="diffusion_models.models.positional_encoding.PositionalEncoding" href="diffusion_models.models.positional_encoding.PositionalEncoding.html" /> 
+    <link rel="prev" title="diffusion_models.models.positional_encoding.PositionalEncoding2D" href="diffusion_models.models.positional_encoding.PositionalEncoding2D.html" /> 
 </head>
 
 <body class="wy-body-for-nav"> 
@@ -123,7 +123,7 @@
            </div>
           </div>
           <footer><div class="rst-footer-buttons" role="navigation" aria-label="Footer">
-        <a href="diffusion_models.models.positional_encoding.PositionalEncoding.html" class="btn btn-neutral float-left" title="diffusion_models.models.positional_encoding.PositionalEncoding" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
+        <a href="diffusion_models.models.positional_encoding.PositionalEncoding2D.html" class="btn btn-neutral float-left" title="diffusion_models.models.positional_encoding.PositionalEncoding2D" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
         <a href="diffusion_models.models.unet.DecodingBlock.html" class="btn btn-neutral float-right" title="diffusion_models.models.unet.DecodingBlock" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
     </div>
 
