deploy: 116265bb25c09dd05ba5060e1bbb97a1e9ce074e

--- a/genindex.html
+++ b/genindex.html
@@ -93,6 +93,7 @@
  | <a href="#F"><strong>F</strong></a>
  | <a href="#G"><strong>G</strong></a>
  | <a href="#I"><strong>I</strong></a>
+ | <a href="#L"><strong>L</strong></a>
  | <a href="#M"><strong>M</strong></a>
  | <a href="#N"><strong>N</strong></a>
  | <a href="#P"><strong>P</strong></a>
@@ -138,6 +139,20 @@
       <li><a href="_autosummary/diffusion_models.models.unet.DecodingBlock.html#diffusion_models.models.unet.DecodingBlock">DecodingBlock (class in diffusion_models.models.unet)</a>
 </li>
       <li>
+    diffusion_models.losses
+
+      <ul>
+        <li><a href="_autosummary/diffusion_models.losses.html#module-diffusion_models.losses">module</a>
+</li>
+      </ul></li>
+      <li>
+    diffusion_models.losses.kl_divergence
+
+      <ul>
+        <li><a href="_autosummary/diffusion_models.losses.kl_divergence.html#module-diffusion_models.losses.kl_divergence">module</a>
+</li>
+      </ul></li>
+      <li>
     diffusion_models.models
 
       <ul>
@@ -172,6 +187,8 @@
         <li><a href="_autosummary/diffusion_models.models.vae.html#module-diffusion_models.models.vae">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     diffusion_models.mri_forward
 
@@ -179,8 +196,6 @@
         <li><a href="_autosummary/diffusion_models.mri_forward.html#module-diffusion_models.mri_forward">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     diffusion_models.mri_forward.noise
 
@@ -285,6 +300,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_autosummary/diffusion_models.mri_forward.undersampling_mask.gaussian_kernel2d.html#diffusion_models.mri_forward.undersampling_mask.gaussian_kernel2d">gaussian_kernel2d() (in module diffusion_models.mri_forward.undersampling_mask)</a>
 </li>
+      <li><a href="_autosummary/diffusion_models.losses.kl_divergence.gaussian_kl.html#diffusion_models.losses.kl_divergence.gaussian_kl">gaussian_kl() (in module diffusion_models.losses.kl_divergence)</a>
+</li>
       <li><a href="_autosummary/diffusion_models.models.positional_encoding.PositionalEncoding.html#diffusion_models.models.positional_encoding.PositionalEncoding.get_pos_encoding">get_pos_encoding() (diffusion_models.models.positional_encoding.PositionalEncoding method)</a>
 </li>
   </ul></td>
@@ -298,6 +315,14 @@
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_autosummary/diffusion_models.mri_forward.noise.independent_gauss_noise.html#diffusion_models.mri_forward.noise.independent_gauss_noise">independent_gauss_noise() (in module diffusion_models.mri_forward.noise)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="L">L</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="_autosummary/diffusion_models.losses.kl_divergence.log_gaussian_kl.html#diffusion_models.losses.kl_divergence.log_gaussian_kl">log_gaussian_kl() (in module diffusion_models.losses.kl_divergence)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -317,6 +342,10 @@
     module
 
       <ul>
+        <li><a href="_autosummary/diffusion_models.losses.html#module-diffusion_models.losses">diffusion_models.losses</a>
+</li>
+        <li><a href="_autosummary/diffusion_models.losses.kl_divergence.html#module-diffusion_models.losses.kl_divergence">diffusion_models.losses.kl_divergence</a>
+</li>
         <li><a href="_autosummary/diffusion_models.models.html#module-diffusion_models.models">diffusion_models.models</a>
 </li>
         <li><a href="_autosummary/diffusion_models.models.mnist_enc.html#module-diffusion_models.models.mnist_enc">diffusion_models.models.mnist_enc</a>
