deploy: 11dfb17da154e175532ed4e90f9d4d50df94b58e

--- a/genindex.html
+++ b/genindex.html
@@ -116,9 +116,13 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_autosummary/diffusion_models.mri_forward.noise.apply_add_gauss_noise.html#diffusion_models.mri_forward.noise.apply_add_gauss_noise">apply_add_gauss_noise() (in module diffusion_models.mri_forward.noise)</a>
 </li>
+      <li><a href="_autosummary/diffusion_models.mri_forward.noise.apply_mult_gauss_noise.html#diffusion_models.mri_forward.noise.apply_mult_gauss_noise">apply_mult_gauss_noise() (in module diffusion_models.mri_forward.noise)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="_autosummary/diffusion_models.mri_forward.noise.apply_mult_gauss_noise.html#diffusion_models.mri_forward.noise.apply_mult_gauss_noise">apply_mult_gauss_noise() (in module diffusion_models.mri_forward.noise)</a>
+      <li><a href="_autosummary/diffusion_models.models.unet.AttentionDecodingBlock.html#diffusion_models.models.unet.AttentionDecodingBlock">AttentionDecodingBlock (class in diffusion_models.models.unet)</a>
+</li>
+      <li><a href="_autosummary/diffusion_models.models.unet.AttentionEncodingBlock.html#diffusion_models.models.unet.AttentionEncodingBlock">AttentionEncodingBlock (class in diffusion_models.models.unet)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -127,6 +131,10 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="_autosummary/diffusion_models.utils.datasets.Cifar10Dataset.html#diffusion_models.utils.datasets.Cifar10Dataset">Cifar10Dataset (class in diffusion_models.utils.datasets)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="_autosummary/diffusion_models.utils.datasets.Cifar10DebugDataset.html#diffusion_models.utils.datasets.Cifar10DebugDataset">Cifar10DebugDataset (class in diffusion_models.utils.datasets)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -261,9 +269,15 @@
 </li>
         <li><a href="_autosummary/diffusion_models.models.positional_encoding.PositionalEncoding2D.html#diffusion_models.models.positional_encoding.PositionalEncoding2D.forward">(diffusion_models.models.positional_encoding.PositionalEncoding2D method)</a>
 </li>
+        <li><a href="_autosummary/diffusion_models.models.unet.AttentionDecodingBlock.html#diffusion_models.models.unet.AttentionDecodingBlock.forward">(diffusion_models.models.unet.AttentionDecodingBlock method)</a>
+</li>
+        <li><a href="_autosummary/diffusion_models.models.unet.AttentionEncodingBlock.html#diffusion_models.models.unet.AttentionEncodingBlock.forward">(diffusion_models.models.unet.AttentionEncodingBlock method)</a>
+</li>
         <li><a href="_autosummary/diffusion_models.models.unet.DecodingBlock.html#diffusion_models.models.unet.DecodingBlock.forward">(diffusion_models.models.unet.DecodingBlock method)</a>
 </li>
         <li><a href="_autosummary/diffusion_models.models.unet.EncodingBlock.html#diffusion_models.models.unet.EncodingBlock.forward">(diffusion_models.models.unet.EncodingBlock method)</a>
+</li>
+        <li><a href="_autosummary/diffusion_models.models.unet.SelfAttention.html#diffusion_models.models.unet.SelfAttention.forward">(diffusion_models.models.unet.SelfAttention method)</a>
 </li>
         <li><a href="_autosummary/diffusion_models.models.unet.UNet.html#diffusion_models.models.unet.UNet.forward">(diffusion_models.models.unet.UNet method)</a>
 </li>
@@ -421,6 +435,8 @@
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="_autosummary/diffusion_models.models.unet.SelfAttention.html#diffusion_models.models.unet.SelfAttention">SelfAttention (class in diffusion_models.models.unet)</a>
+</li>
       <li><a href="_autosummary/diffusion_models.models.vae.SkipDownSampler.html#diffusion_models.models.vae.SkipDownSampler">SkipDownSampler (class in diffusion_models.models.vae)</a>
 </li>
   </ul></td>
