deploy: 0ecf72f46b166fdba3364906b95c69a3be732ac2

--- a/_autosummary/diffusion_models.losses.kl_divergence.gaussian_kl.html
+++ b/_autosummary/diffusion_models.losses.kl_divergence.gaussian_kl.html
@@ -111,10 +111,10 @@
 <dl class="field-list simple">
 <dt class="field-odd">Parameters<span class="colon">:</span></dt>
 <dd class="field-odd"><ul class="simple">
-<li><p><strong>p_mean</strong> (<code class="xref py py-class docutils literal notranslate"><span class="pre">Float[Tensor,</span> <span class="pre">'1']</span></code>) – mean value of first distribution</p></li>
-<li><p><strong>p_var</strong> (<code class="xref py py-class docutils literal notranslate"><span class="pre">Float[Tensor,</span> <span class="pre">'1']</span></code>) – variance value of first distribution</p></li>
-<li><p><strong>q_mean</strong> (<code class="xref py py-class docutils literal notranslate"><span class="pre">Float[Tensor,</span> <span class="pre">'1']</span></code>) – mean value of second distribution</p></li>
-<li><p><strong>q_var</strong> (<code class="xref py py-class docutils literal notranslate"><span class="pre">Float[Tensor,</span> <span class="pre">'1']</span></code>) – variance value of second distribution</p></li>
+<li><p><strong>p_mean</strong> (<span class="sphinx_autodoc_typehints-type"><code class="xref py py-class docutils literal notranslate"><span class="pre">Float[Tensor,</span> <span class="pre">'1']</span></code></span>) – mean value of first distribution</p></li>
+<li><p><strong>p_var</strong> (<span class="sphinx_autodoc_typehints-type"><code class="xref py py-class docutils literal notranslate"><span class="pre">Float[Tensor,</span> <span class="pre">'1']</span></code></span>) – variance value of first distribution</p></li>
+<li><p><strong>q_mean</strong> (<span class="sphinx_autodoc_typehints-type"><code class="xref py py-class docutils literal notranslate"><span class="pre">Float[Tensor,</span> <span class="pre">'1']</span></code></span>) – mean value of second distribution</p></li>
+<li><p><strong>q_var</strong> (<span class="sphinx_autodoc_typehints-type"><code class="xref py py-class docutils literal notranslate"><span class="pre">Float[Tensor,</span> <span class="pre">'1']</span></code></span>) – variance value of second distribution</p></li>
 </ul>
 </dd>
 <dt class="field-even">Returns<span class="colon">:</span></dt>
