--- a/genindex.html
+++ b/genindex.html
@@ -88,6 +88,7 @@
  <a href="#_"><strong>_</strong></a>
  | <a href="#A"><strong>A</strong></a>
  | <a href="#B"><strong>B</strong></a>
+ | <a href="#C"><strong>C</strong></a>
  | <a href="#D"><strong>D</strong></a>
  | <a href="#E"><strong>E</strong></a>
  | <a href="#F"><strong>F</strong></a>
@@ -137,6 +138,14 @@
   </ul></td>
 </tr></table>
 
+<h2 id="C">C</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="_autosummary/diffusion_models.utils.helpers.complex_to_2channelfloat.html#diffusion_models.utils.helpers.complex_to_2channelfloat">complex_to_2channelfloat() (in module diffusion_models.utils.helpers)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -170,6 +179,13 @@
 
       <ul>
         <li><a href="_autosummary/diffusion_models.models.mnist_enc.html#module-diffusion_models.models.mnist_enc">module</a>
+</li>
+      </ul></li>
+      <li>
+    diffusion_models.models.multicoil
+
+      <ul>
+        <li><a href="_autosummary/diffusion_models.models.multicoil.html#module-diffusion_models.models.multicoil">module</a>
 </li>
       </ul></li>
       <li>
@@ -256,6 +272,10 @@
       <li><a href="_autosummary/diffusion_models.models.mnist_enc.MNISTEncoder.html#diffusion_models.models.mnist_enc.MNISTEncoder.forward">forward() (diffusion_models.models.mnist_enc.MNISTEncoder method)</a>
 
       <ul>
+        <li><a href="_autosummary/diffusion_models.models.multicoil.MultiCoilConv2d.html#diffusion_models.models.multicoil.MultiCoilConv2d.forward">(diffusion_models.models.multicoil.MultiCoilConv2d method)</a>
+</li>
+        <li><a href="_autosummary/diffusion_models.models.multicoil.MultiCoilReducer.html#diffusion_models.models.multicoil.MultiCoilReducer.forward">(diffusion_models.models.multicoil.MultiCoilReducer method)</a>
+</li>
         <li><a href="_autosummary/diffusion_models.models.positional_encoding.PositionalEncoding.html#diffusion_models.models.positional_encoding.PositionalEncoding.forward">(diffusion_models.models.positional_encoding.PositionalEncoding method)</a>
 </li>
         <li><a href="_autosummary/diffusion_models.models.positional_encoding.PositionalEncoding2D.html#diffusion_models.models.positional_encoding.PositionalEncoding2D.forward">(diffusion_models.models.positional_encoding.PositionalEncoding2D method)</a>
@@ -345,6 +365,8 @@
 </li>
         <li><a href="_autosummary/diffusion_models.models.mnist_enc.html#module-diffusion_models.models.mnist_enc">diffusion_models.models.mnist_enc</a>
 </li>
+        <li><a href="_autosummary/diffusion_models.models.multicoil.html#module-diffusion_models.models.multicoil">diffusion_models.models.multicoil</a>
+</li>
         <li><a href="_autosummary/diffusion_models.models.positional_encoding.html#module-diffusion_models.models.positional_encoding">diffusion_models.models.positional_encoding</a>
 </li>
         <li><a href="_autosummary/diffusion_models.models.unet.html#module-diffusion_models.models.unet">diffusion_models.models.unet</a>
@@ -364,6 +386,12 @@
         <li><a href="_autosummary/diffusion_models.utils.mp_setup.html#module-diffusion_models.utils.mp_setup">diffusion_models.utils.mp_setup</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="_autosummary/diffusion_models.models.multicoil.MultiCoilConv2d.html#diffusion_models.models.multicoil.MultiCoilConv2d">MultiCoilConv2d (class in diffusion_models.models.multicoil)</a>
+</li>
+      <li><a href="_autosummary/diffusion_models.models.multicoil.MultiCoilReducer.html#diffusion_models.models.multicoil.MultiCoilReducer">MultiCoilReducer (class in diffusion_models.models.multicoil)</a>
+</li>
   </ul></td>
 </tr></table>
 
