--- a/_autosummary/diffusion_models.mri_forward.undersampling_mask.gaussian_kernel2d.html
+++ b/_autosummary/diffusion_models.mri_forward.undersampling_mask.gaussian_kernel2d.html
@@ -119,8 +119,8 @@
 <dl class="field-list simple">
 <dt class="field-odd">Parameters<span class="colon">:</span></dt>
 <dd class="field-odd"><ul class="simple">
-<li><p><strong>size</strong> (<code class="xref py py-class docutils literal notranslate"><span class="pre">Tensor</span></code>) – shape tensor</p></li>
-<li><p><strong>rel_sigma</strong> (<code class="xref py py-class docutils literal notranslate"><span class="pre">float</span></code>) – std dev of kernel, if image width/height was 1</p></li>
+<li><p><strong>size</strong> (<span class="sphinx_autodoc_typehints-type"><code class="xref py py-class docutils literal notranslate"><span class="pre">Tensor</span></code></span>) – shape tensor</p></li>
+<li><p><strong>rel_sigma</strong> (<span class="sphinx_autodoc_typehints-type"><code class="xref py py-class docutils literal notranslate"><span class="pre">float</span></code></span>) – std dev of kernel, if image width/height was 1</p></li>
 </ul>
 </dd>
 <dt class="field-even">Returns<span class="colon">:</span></dt>
