--- a/_autosummary/diffusion_models.mri_forward.undersampling_mask.naive_undersampling2d.html
+++ b/_autosummary/diffusion_models.mri_forward.undersampling_mask.naive_undersampling2d.html
@@ -119,8 +119,8 @@
 <dl class="field-list simple">
 <dt class="field-odd">Parameters<span class="colon">:</span></dt>
 <dd class="field-odd"><ul class="simple">
-<li><p><strong>size</strong> (<code class="xref py py-class docutils literal notranslate"><span class="pre">tensor</span></code>) – shape tensor</p></li>
-<li><p><strong>undersampling_ratio</strong> (<code class="xref py py-class docutils literal notranslate"><span class="pre">int</span></code>) – integer representing the acceleration in both dimensions</p></li>
+<li><p><strong>size</strong> (<span class="sphinx_autodoc_typehints-type"><code class="xref py py-class docutils literal notranslate"><span class="pre">tensor</span></code></span>) – shape tensor</p></li>
+<li><p><strong>undersampling_ratio</strong> (<span class="sphinx_autodoc_typehints-type"><code class="xref py py-class docutils literal notranslate"><span class="pre">int</span></code></span>) – integer representing the acceleration in both dimensions</p></li>
 </ul>
 </dd>
 <dt class="field-even">Returns<span class="colon">:</span></dt>
